Fix overflow in settings page

--- a/bookmarks/styles/settings.scss
+++ b/bookmarks/styles/settings.scss
@@ -7,8 +7,9 @@
     }
   }
 
-  textarea.custom-css {
+  textarea.monospace {
     font-family: monospace;
+    box-sizing: border-box;
   }
 
   .input-group > input[type=submit] {
